# PaperForge

./: .gitignore  README.md  iris_test.csv  pytest.ini  render.yaml  setup.py  setup_files.py
app/: main.py
app/api/routes/: analyze.py  benchmark.py  generate.py  health.py  parse.py
app/core/: config.py  exceptions.py  logging.py
app/models/: benchmark.py  generation.py  paper.py
app/services/: analyzer.py  benchmarker.py  generator.py  parser.py  sandbox.py
app/utils/: arxiv.py  text.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js  App_w4.js  index.css
frontend/src/api/: client.js
frontend/src/components/: AnalysisPanel.jsx  BenchmarkPanel.jsx  CodePanel.jsx  ErrorBanner.jsx  Header.jsx  HeroSection.jsx  InputBar.jsx  LoadingPanels.jsx
frontend/src/hooks/: usePaperForge.js
paperforge-sdk/paperforge-sdk/: .gitignore  README.md  pyproject.toml
paperforge-sdk/paperforge-sdk/examples/: quickstart.py
paperforge-sdk/paperforge-sdk/paperforge/: __init__.py  client.py  exceptions.py  models.py
paperforge-sdk/paperforge-sdk/tests/: test_sdk.py
paperforge.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_api.py  test_benchmark.py  test_generation.py  test_validation.py
